--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,10 @@
     <packaging>maven-plugin</packaging>
 
     <name>Versioning Maven Plugin</name>
+    <description>
+        Generates a source code file with information from your SCM. This makes it easy to show this information
+        inside your application.
+    </description>
 
     <url>http://github.com/jtietema/versioning-maven-plugin</url>
 
@@ -51,6 +55,10 @@
             <id>sonatype-nexus-staging</id>
             <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
         </repository>
+        <site>
+            <id>versioning-website</id>
+            <url>scp://tietema.net/var/www/versioning</url>
+        </site>
     </distributionManagement>
 
     <developers>
@@ -139,7 +147,24 @@
                     <target>1.6</target>
                 </configuration>
             </plugin>
+
         </plugins>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-site-plugin</artifactId>
+                    <version>3.2</version>
+                    <dependencies>
+                        <dependency><!-- add support for ssh/scp -->
+                            <groupId>org.apache.maven.wagon</groupId>
+                            <artifactId>wagon-ssh</artifactId>
+                            <version>2.4</version>
+                        </dependency>
+                    </dependencies>
+                </plugin>
+            </plugins>
+        </pluginManagement>
         <extensions>
             <extension>
                 <groupId>org.apache.maven.wagon</groupId>
